--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <div class="content">
       <div id="large-header" class="large-header">
          <canvas id="demo-canvas"></canvas>
-         <h1 class="main-title"><span class="thin">SOLUTION</span> '19</h1>
+         <h1 class="main-title"><span class="thin">SOLUTIONS</span> '19</h1>
       </div>
    </div>
 </div>
